--- a/cic2025/_includes/navbar.html
+++ b/cic2025/_includes/navbar.html
@@ -6,7 +6,7 @@
                 <span class="fa fa-bars"></span>
             </button>
             <a class="navbar-brand brand-style" href="{{ site.baseurl }}/">
-                <img id="logo-header" src="{{ site.baseurl }}/assets/img/tps2025.jpg" width="100" alt="Logo">
+                <img id="logo-header" src="{{ site.baseurl }}/assets/img/IEEE-CS_LogoTM-black.png" width="100" alt="Logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
