--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -6,7 +6,7 @@
                 <span class="fa fa-bars"></span>
             </button>
             <a class="navbar-brand brand-style" href="{{ site.baseurl1 }}/">
-                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/cogmi.jpg" width="150" alt="Logo">
+                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/IEEE-CS_LogoTM-black.png" width="200" alt="Logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
@@ -65,7 +65,7 @@
                         <li><a href="{{ site.baseurl }}/presentation-instructions">Program Committees</a></li>
                     </ul> 
                 </li>
-                <!-- <li class=""><a href="{{ site.baseurl1 }}/organizers" class="">Committees</a></li> -->
+                <li class=""><a href="{{ site.baseurl1 }}/organizers" class="">Committees</a></li>
                 
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
