--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -58,14 +58,13 @@
                         </ul>
                 </li>
                 <li class="dropdown">
-                    <!-- <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a> -->
+                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a>
                     <ul class="dropdown-menu">                            
-                        <li><a href="{{ site.baseurl }}/virtual-discussion-rooms">Steering Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl1 }}/organizers" class="">Organizing Committees</a></li>
-                        <li><a href="{{ site.baseurl }}/presentation-instructions">Program Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
-                <li class=""><a href="{{ site.baseurl1 }}/organizers" class="">Committees</a></li>
                 
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
