--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -60,9 +60,9 @@
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a>
                     <ul class="dropdown-menu">                            
-                        <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
+                        <li><a href="{{ site.baseurl1 }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl1 }}/organizers" class="">Organizing Committees</a></li>
-                        <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
+                        <li><a href="{{ site.baseurl1 }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
                 
