--- a/cic2025/_includes/navbar.html
+++ b/cic2025/_includes/navbar.html
@@ -61,7 +61,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a>
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
-                        <li><a href="{{ site.baseurl1 }}/organizers" class="">Organizing Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/organizers">Organizing Committees</a></li>
                         <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
