--- a/tps2025/_includes/navbar.html
+++ b/tps2025/_includes/navbar.html
@@ -61,7 +61,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a>
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
-                        <li><a href="{{ site.baseurl1 }}/organizers" class="">Organizing Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/organizers">Organizing Committees</a></li>
                         <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
@@ -70,16 +70,12 @@
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
                     <ul class="dropdown-menu">
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2024/" target="_blank">CIC 2024</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2023/" target="_blank">CIC 2023</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2022/" target="_blank">CIC 2022</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2021/" target="_blank">CIC 2021</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2020/" target="_blank">CIC 2020</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2019/" target="_blank">CIC 2019</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2018/" target="_blank">CIC 2018</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2017/" target="_blank">CIC 2017</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2016/" target="_blank">CIC 2016</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2015/" target="_blank">CIC 2015</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2024/" target="_blank">TPS 2024</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2023/" target="_blank">TPS 2023</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2022/" target="_blank">TPS 2022</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2021/" target="_blank">TPS 2021</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2020/" target="_blank">TPS 2020</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2019/" target="_blank">TPS 2019</a></li>
                     </ul>
                 </li>
 
