--- a/CogMI2025/_includes/navbar1.html
+++ b/CogMI2025/_includes/navbar1.html
@@ -70,16 +70,12 @@
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
                     <ul class="dropdown-menu">
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2024/" target="_blank">CIC 2024</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2023/" target="_blank">CIC 2023</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2022/" target="_blank">CIC 2022</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2021/" target="_blank">CIC 2021</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2020/" target="_blank">CIC 2020</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2019/" target="_blank">CIC 2019</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2018/" target="_blank">CIC 2018</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2017/" target="_blank">CIC 2017</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2016/" target="_blank">CIC 2016</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2015/" target="_blank">CIC 2015</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2024/" target="_blank">CogMI 2024</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2023/" target="_blank">CogMI 2023</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2022/" target="_blank">CogMI 2022</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2021/" target="_blank">CogMI 2021</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2020/" target="_blank">CogMI 2020</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2019/" target="_blank">CogMI 2019</a></li>
                     </ul>
                 </li>
 
