run well for Cogmi

--- a/CogMI2025/_includes/navbar.html
+++ b/CogMI2025/_includes/navbar.html
@@ -61,7 +61,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Committees</a>
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
-                        <li><a href="{{ site.baseurl1 }}/organizers" class="">Organizing Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/organizers">Organizing Committees</a></li>
                         <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
@@ -76,6 +76,7 @@
                         <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2021/" target="_blank">CogMI 2021</a></li>
                         <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2020/" target="_blank">CogMI 2020</a></li>
                         <li><a href="https://www.sis.pitt.edu/lersais/conference/cogmi/2019/" target="_blank">CogMI 2019</a></li>
+                        
                     </ul>
                 </li>
 
