--- a/cic2025/_includes/navbar.html
+++ b/cic2025/_includes/navbar.html
@@ -14,47 +14,46 @@
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Submit</a>
                     <ul class="dropdown-menu">
-                        <!--<li><a href="list-of-calls">List of calls</a></li>-->
-                        <li><a href="{{ site.baseurl }}/call-for-full-papers">Call for Full Papers</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Short Papers</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-demonstration">Call for Demonstrations</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-doctoral-consortium-papers">Call for Doctoral Consortium Papers</a></li>
-                        <li><a href="{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li>
+                        <li><a href="#list-of-calls">List of calls</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-full-papers">Call for Full Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Short Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-demonstration">Call for Demonstrations</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-doctoral-consortium-papers">Call for Doctoral Consortium Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Program</a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li>
-                        <li><a href="{{ site.baseurl }}/schedule">Schedule</a></li>
-                        <li><a href="{{ site.baseurl }}/booklets">Booklets</a></li>
-                        <li><a href="{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li>
-                        <li><a href="{{ site.baseurl }}/tutorials">Tutorials</a></li>
-                        <li><a href="{{ site.baseurl }}/workshops">Workshops</a></li>
-                        <li><a href="{{ site.baseurl }}/doctoral-consortium">Doctoral Consortium</a></li>
-                        <li><a href="{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li>
-                        <li><a href="{{ site.baseurl }}/summer-school">Summer School</a></li>
-                        <li><a href="http://sigir.org/women-in-ir/sigir2020.html">Women-in-IR</a></li>
-                        <li><a href="{{ site.baseurl }}/awards">Awards</a></li>
-                        <li><a href="{{ site.baseurl }}/accepted-papers">Accepted Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li>
+                        <li><a href="#{{ site.baseurl }}/schedule">Schedule</a></li>
+                        <li><a href="#{{ site.baseurl }}/booklets">Booklets</a></li>
+                        <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li>
+                        <li><a href="#{{ site.baseurl }}/tutorials">Tutorials</a></li>
+                        <li><a href="#{{ site.baseurl }}/workshops">Workshops</a></li>
+                        <li><a href="#{{ site.baseurl }}/doctoral-consortium">Doctoral Consortium</a></li>
+                        <li><a href="#{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li>
+                        <li><a href="#{{ site.baseurl }}/summer-school">Summer School</a></li>
+                        <li><a href="#{{ site.baseurl }}/awards">Awards</a></li>
+                        <li><a href="#{{ site.baseurl }}/accepted-papers">Accepted Papers</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Attend</a>
                         <ul class="dropdown-menu">                            
-                            <li><a href="https://sigir-schedule.baai.ac.cn/">Virtual Conference Portal</a></li>
-                            <li><a href="{{ site.baseurl }}/virtual-discussion-rooms">Virtual Discussion Rooms</a></li>
-                            <li><a href="{{ site.baseurl }}/registration">Registration</a></li>
-                            <li><a href="{{ site.baseurl }}/presentation-instructions">Presentation Instructions</a></li>
-                            <li><a href="{{ site.baseurl }}/call-for-volunteers">Call for Volunteers</a></li>
-                            <!--<li><a href="{{ site.baseurl }}/volunteers">Volunteers</a></li>-->
-                            <li><a href="{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
-                            <li><a href="{{ site.baseurl }}/visa-information">Visa Information</a></li>
-                            <li><a href="{{ site.baseurl }}/accommodation">Accommodation</a></li>
-                            <li><a href="{{ site.baseurl }}/travel">Travel</a></li>
-                            <li><a href="{{ site.baseurl }}/venue">Venue</a></li>
+                            <!-- <li><a href="https://sigir-schedule.baai.ac.cn/">Virtual Conference Portal</a></li> -->
+                            <li><a href="#{{ site.baseurl }}/virtual-discussion-rooms">Virtual Discussion Rooms</a></li>
+                            <li><a href="#{{ site.baseurl }}/registration">Registration</a></li>
+                            <li><a href="#{{ site.baseurl }}/presentation-instructions">Presentation Instructions</a></li>
+                            <li><a href="#{{ site.baseurl }}/call-for-volunteers">Call for Volunteers</a></li>
+                            <li><a href="#{{ site.baseurl }}/volunteers">Volunteers</a></li>
+                            <li><a href="#{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
+                            <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li>
+                            <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li>
+                            <li><a href="#{{ site.baseurl }}/travel">Travel</a></li>
+                            <li><a href="#{{ site.baseurl }}/venue">Venue</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
@@ -87,7 +86,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Sponsors</a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ site.baseurl }}/call-for-sponsors">Call for sponsors</a></li>
-                        <li><a href="{{ site.baseurl }}/list-of-sponsors">List of sponsors</a></li>
+                        <li><a href="#{{ site.baseurl }}/list-of-sponsors">List of sponsors</a></li>
                     </ul>
                 </li>
             </ul>
