Update organizer & header

--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -12,48 +12,39 @@
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Submit</a>
+                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#list-of-calls">List of calls</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-full-papers">Call for Full Papers</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-short-papers" class='disabled'>Call for Short Papers</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-tutorials">Call for Tutorials</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-workshops">Call for Workshops</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-demonstration">Call for Demonstrations</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-doctoral-consortium-papers">Call for Doctoral Consortium Papers</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li>
+                        <!-- <li><a href="#list-of-calls">List of Calls</a></li> -->
+                        <li><a href="#{{ site.baseurl }}/call-for-full-papers">Call for Full Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Vision Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li> -->
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Program</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#{{ site.baseurl1 }}/program-at-a-glance">Program at a Glance</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/schedule">Schedule</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/booklets">Booklets</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/keynotes">Keynotes and Panel</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/tutorials">Tutorials</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/workshops">Workshops</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/doctoral-consortium">Doctoral Consortium</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/industry-track-schedule">Industry Track</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/summer-school">Summer School</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/awards">Awards</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/accepted-papers">Accepted Papers</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li> -->
+                        <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li>
+                        <li><a href="#{{ site.baseurl }}/schedule">Schedule</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li> -->
+                        <li><a href="#{{ site.baseurl }}/tutorials">Tutorials</a></li>
+                        <li><a href="#{{ site.baseurl }}/workshops">Workshops</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li> -->
+                        <li><a href="#{{ site.baseurl }}/awards">Awards</a></li>
+                        <li><a href="#{{ site.baseurl }}/accepted-papers">Accepted Papers</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Attend</a>
-                        <ul class="dropdown-menu">                            
-                            <!-- <li><a href="https://sigir-schedule.baai.ac.cn/">Virtual Conference Portal</a></li> -->
-                            <li><a href="#{{ site.baseurl1 }}/virtual-discussion-rooms">Virtual Discussion Rooms</a></li>
+                        <ul class="dropdown-menu">
                             <li><a href="#{{ site.baseurl1 }}/registration">Registration</a></li>
                             <li><a href="#{{ site.baseurl1 }}/presentation-instructions">Presentation Instructions</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/call-for-volunteers">Call for Volunteers</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/volunteers">Volunteers</a></li>
                             <li><a href="#{{ site.baseurl1 }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl1 }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl1 }}/accommodation">Accommodation</a></li>
                             <li><a href="#{{ site.baseurl1 }}/travel">Travel</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/venue">Venue</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
@@ -61,7 +52,7 @@
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl1 }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl1 }}/organizers">Organizing Committees</a></li>
-                        <li><a href="{{ site.baseurl1 }}/pcs">Program Committees</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
                 
