--- a/CogMI2025/assets/css/custom1.css
+++ b/CogMI2025/assets/css/custom1.css
@@ -60,8 +60,8 @@
 }
 
 #organizers ul li.person-card a img {
-    width: 160px;
-    height: 180px;
+    max-width: 65%;
+    max-height: 200px;
     display: block;
     margin: 0 auto 5px;
     padding: 2px;
