--- a/tps2025/_includes/navbar.html
+++ b/tps2025/_includes/navbar.html
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class=""><a href="../index.html" style="font-weight: 1000; color:black">IEEE CIC</a></li>
+                <li class=""><a href="../index.html" style="font-weight: 1000; color:black">IEEE TPS</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
