minor fix re: banner, organizer

--- a/CogMI2025/assets/css/custom1.css
+++ b/CogMI2025/assets/css/custom1.css
@@ -60,7 +60,7 @@
 }
 
 #organizers ul li.person-card a img {
-    max-width: 65%;
+    /* width: 170px; */
     max-height: 200px;
     display: block;
     margin: 0 auto 5px;
