add: call for paper

--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -15,10 +15,10 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
                         <!-- <li><a href="#list-of-calls">List of Calls</a></li> -->
-                        <li><a href="#{{ site.baseurl }}/call-for-full-papers">Call for Full Papers</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Vision Papers</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li>
+                        <li><a href="{{ site.baseurl }}/call-for-full-papers">Call for Papers</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Vision Papers</a></li> -->
+                        <!-- <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li> -->
+                        <!-- <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li> -->
                         <!-- <li><a href="#{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li> -->
                     </ul>
                 </li>
