--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -15,7 +15,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
                         <!-- <li><a href="#list-of-calls">List of Calls</a></li> -->
-                        <li><a href="{{ site.baseurl }}/call-for-full-papers">Call for Papers</a></li>
+                        <li><a href="{{ site.baseurl1 }}/call-for-full-papers">Call for Papers</a></li>
                         <!-- <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Vision Papers</a></li> -->
                         <!-- <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li> -->
                         <!-- <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li> -->
@@ -26,14 +26,14 @@
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Program</a>
                     <ul class="dropdown-menu">
                         <!-- <li><a href="#{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li> -->
-                        <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li>
-                        <li><a href="#{{ site.baseurl }}/schedule">Schedule</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/keynotes">Keynotes and Panel</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/schedule">Schedule</a></li>
                         <!-- <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li> -->
-                        <li><a href="#{{ site.baseurl }}/tutorials">Tutorials</a></li>
-                        <li><a href="#{{ site.baseurl }}/workshops">Workshops</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/tutorials">Tutorials</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/workshops">Workshops</a></li>
                         <!-- <li><a href="#{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li> -->
-                        <li><a href="#{{ site.baseurl }}/awards">Awards</a></li>
-                        <li><a href="#{{ site.baseurl }}/accepted-papers">Accepted Papers</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/awards">Awards</a></li>
+                        <li><a href="#{{ site.baseurl1 }}/accepted-papers">Accepted Papers</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
