--- a/CogMI2025/_includes/navbar1.html
+++ b/CogMI2025/_includes/navbar1.html
@@ -6,7 +6,7 @@
                 <span class="fa fa-bars"></span>
             </button>
             <a class="navbar-brand brand-style" href="{{ site.baseurl1 }}/">
-                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/IEEE-CS_LogoTM-black.png" width="200" alt="Logo">
+                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/IEEE-CS_LogoTM-white.png" width="200" alt="Logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
@@ -52,7 +52,7 @@
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl1 }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl1 }}/organizers">Organizing Committees</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/pcs">Program Committees</a></li>
+                        <li><a href="{{ site.baseurl1 }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
                 
