--- a/CogMI2025/_layouts/default.html
+++ b/CogMI2025/_layouts/default.html
@@ -8,7 +8,7 @@
 <!--<![endif]-->
 
 <head>
-    <title>CIC 2025</title>
+    <title>IEEE CogMI 2025</title>
     {% include head.html %}
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/header-v3.css">
 </head>
