--- a/tps2025/_includes/navbar1.html
+++ b/tps2025/_includes/navbar1.html
@@ -52,7 +52,7 @@
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl1 }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl1 }}/organizers">Organizing Committees</a></li>
-                        <li><a href="#{{ site.baseurl1 }}/pcs">Program Committees</a></li>
+                        <li><a href="{{ site.baseurl1 }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
                 
