--- a/tps2025/_includes/navbar.html
+++ b/tps2025/_includes/navbar.html
@@ -53,7 +53,7 @@
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl }}/organizers">Organizing Committees</a></li>
-                        <li><a href="#{{ site.baseurl }}/pcs">Program Committees</a></li>
+                        <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
 
