--- a/tps2025/_includes/navbar1.html
+++ b/tps2025/_includes/navbar1.html
@@ -44,7 +44,7 @@
                             <li><a href="#{{ site.baseurl1 }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl1 }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl1 }}/accommodation">Accommodation</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/travel">Travel</a></li>
+                            <li><a href="{{ site.baseurl1 }}/travel">Travel</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
