--- a/tps2025/_includes/banner.html
+++ b/tps2025/_includes/banner.html
@@ -11,7 +11,7 @@
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; width: 90%;">
         <h1 class="animated fadeInUp" style="font-size: 64px; font-weight: bold; color: white; text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.8);">IEEE TPS 2025</h1>
         <p class="animated fadeInRight" id="sub_title" style="font-size: 30px; margin-top: 40px; text-align: center; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">The 7<sup>th</sup> IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications</p>
-        <p class="animated fadeInLeft" style="font-size: 30px; margin-top: 10px; text-align: center; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">Nov.11-14, 2025 (TBC), Pittsburgh, USA</p>
+        <p class="animated fadeInLeft" style="font-size: 30px; margin-top: 10px; text-align: center; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">Nov. 11-14, 2025, Pittsburgh, PA, USA</p>
         <p class="animated fadeInLeft"  style="font-size: 30px; margin-top: 10px; text-align: center; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">Co-located with <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">IEEE CIC 2025</a> and <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cogmi/2025/" target="_blank">IEEE CogMI 2025</a></p>
     </div>
 </div>
