add: travel sponsor, fix: wording, add organizers

--- a/CogMI2025/_includes/navbar.html
+++ b/CogMI2025/_includes/navbar.html
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class=""><a href="../index.html" style="font-weight: 1000; color: #687074">IEEE CogMI</a></li>
+                <li class=""><a href="../index.html" style="font-weight: 1000; color:black">IEEE CogMI</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
@@ -45,7 +45,7 @@
                             <li><a href="#{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li>
-                            <li><a href="#{{ site.baseurl }}/travel">Travel</a></li>
+                            <li><a href="{{ site.baseurl }}/travel">Travel</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
