--- a/CogMI2025/_includes/navbar1.html
+++ b/CogMI2025/_includes/navbar1.html
@@ -6,7 +6,7 @@
                 <span class="fa fa-bars"></span>
             </button>
             <a class="navbar-brand brand-style" href="{{ site.baseurl1 }}/">
-                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/IEEE-CS_LogoTM-white.png" width="200" alt="Logo">
+                <img id="logo-header" src="{{ site.baseurl1 }}/assets/img/IEEE-CS_LogoTM-black.png" width="200" alt="Logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
@@ -44,7 +44,7 @@
                             <li><a href="#{{ site.baseurl1 }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl1 }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl1 }}/accommodation">Accommodation</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/travel">Travel</a></li>
+                            <li><a href="{{ site.baseurl1 }}/travel">Travel</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
