add: new workshop

--- a/tps2025/_includes/sidebar.html
+++ b/tps2025/_includes/sidebar.html
@@ -67,6 +67,12 @@
                     &#128206; IEEE Workshop on Trustworthy and Privacy-Preserving Human-AI Collaboration (IEEE TPHAC 2025)
                 </a>
             </li>
+            <li>
+                <a href="https://digitaldiversityla.wixsite.com/eicworkshop2025" target="_blank">
+                    &#128206; Equitable & Inclusive Computing Workshop 2025 (EIC WORKSHOP 2025)
+                </a>
+            </li>
+            
         </ul>
         <br>
     </div>
