--- a/cic2025/_includes/head1.html
+++ b/cic2025/_includes/head1.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="The 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval">
-<meta name="description" content="The 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval">
+<meta name="keywords" content="The 11th IEEE International Conference on Collaboration and Internet Computing">
+<meta name="description" content="The 11th IEEE International Conference on Collaboration and Internet Computing">
 <meta name="author" content="">
 
 
