add: registration, and add links to tdk, and fix some bugs

--- a/cic2025/_includes/footer1.html
+++ b/cic2025/_includes/footer1.html
@@ -4,7 +4,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        2025 &copy; <a href="#">IEEECIC</a> All Rights Reserved.
+                        2025 &copy; <a href="#">IEEECIC</a> All Rights Reserved. 
+                    </p>
+                    <p>
+                        <a href="https://sis.pitt.edu/lersais/LAB/" target="_blank">
+                        Laboratory of Education and Research on Security Assured Information Systems
+                        </a>
                     </p>
                     <p>
                         Thanks for the template provider <a href="https://github.com/Chandler-He/acmsigir2020.git">ACMSIGIR</a>
