--- a/cic2025/_includes/sidebar.html
+++ b/cic2025/_includes/sidebar.html
@@ -5,9 +5,8 @@
         <!-- <a class="btn-u btn-u-aqua btn-u-xs" href="https://twitter.com/sigir2020"
             alt="sigir2020 @sigir2020 Twitter profile" target="_blank" style="margin-left: 5%;"><i class="fa fa-twitter"></i>
             Follow us on Twitter.</a> -->
-        <a class="btn-u btn-u-dark-blue btn-u-xs"
-            href="https://www.facebook.com/groups/516188955209479/" alt="cic2025 facebook profile"
-            target="_blank" style="margin-left: 0%;"><i class="fa fa-facebook"></i>
+        <a class="btn-u btn-u-dark-blue btn-u-xs" href="https://www.facebook.com/groups/516188955209479/"
+            alt="cic2025 facebook profile" target="_blank" style="margin-left: 0%;"><i class="fa fa-facebook"></i>
             Follow us on Facebook.</a>
     </div>
     <!-- <div class="tile">
@@ -29,13 +28,11 @@
                 </a>
             </li> -->
             <li>
-                <img class="img-responsive" src="../assets/img/logos/ieee.gif"
-                    style="width: 100%; margin-top: 10%;">
+                <img class="img-responsive" src="../assets/img/logos/ieee.gif" style="width: 100%; margin-top: 10%;">
             </li>
             <hr>
             <li>
-                <img class="img-responsive" src="../assets/img/logos/ieee_cs.png"
-                    style="width: 100%; margin-top: 10%;">
+                <img class="img-responsive" src="../assets/img/logos/ieee_cs.png" style="width: 100%; margin-top: 10%;">
             </li>
             <br>
         </ul>
@@ -43,8 +40,10 @@
         <h4> Gold Corporate Sponsors</h4>
         <ul>
             <li>
-                <img class="img-responsive" src="../assets/img/logos/TDK.png"
+                <a href="https://www.tdk.com/" target="_blank">
+                    <img class="img-responsive" src="../assets/img/logos/TDK.png"
                     style="width: 100%; margin-top: 10%;">
+                </a>
             </li>
             <hr>
             <li>
@@ -62,13 +61,15 @@
         <ul>
             <li>
                 <a href="https://www.engineering.pitt.edu/ieee-srcist2025" target="_blank">
-                    &#128206; IEEE Workshop on Security and Resiliency of Critical Infrastructure and Space Technologies (IEEE SR-CIST 2025)
+                    &#128206; IEEE Workshop on Security and Resiliency of Critical Infrastructure and Space Technologies
+                    (IEEE SR-CIST 2025)
                 </a>
             </li>
 
             <li>
                 <a href="https://sites.google.com/pitt.edu/tphac/home" target="_blank">
-                    &#128206; IEEE Workshop on Trustworthy and Privacy-Preserving Human-AI Collaboration (IEEE TPHAC 2025)
+                    &#128206; IEEE Workshop on Trustworthy and Privacy-Preserving Human-AI Collaboration (IEEE TPHAC
+                    2025)
                 </a>
             </li>
             <li>
@@ -78,7 +79,8 @@
             </li>
             <li>
                 <a href="https://ieeedistill.github.io/" target="_blank">
-                    &#128206; IEEE Workshop on Distributed, Secure, and Trustworthy Intelligence with LLMs (IEEE DISTILL 2025)
+                    &#128206; IEEE Workshop on Distributed, Secure, and Trustworthy Intelligence with LLMs (IEEE DISTILL
+                    2025)
                 </a>
             </li>
         </ul>
