--- a/cic2025/_includes/footer.html
+++ b/cic2025/_includes/footer.html
@@ -7,6 +7,11 @@
                         2025 &copy; <a href="#">IEEECIC</a> All Rights Reserved.
                     </p>
                     <p>
+                        <a href="https://sis.pitt.edu/lersais/LAB/" target="_blank">
+                        Laboratory of Education and Research on Security Assured Information Systems
+                        </a>
+                    </p>
+                    <p>
                         Thanks for the template provider <a href="https://github.com/Chandler-He/acmsigir2020.git">ACMSIGIR</a>
                     </p>
                 </div>
