--- a/cic2025/_includes/navbar.html
+++ b/cic2025/_includes/navbar.html
@@ -40,11 +40,11 @@
                 <li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Attend</a>
                         <ul class="dropdown-menu">
-                            <li><a href="#{{ site.baseurl }}/registration">Registration</a></li>
+                            <li><a href="{{ site.baseurl }}/registration">Registration</a></li>
                             <li><a href="#{{ site.baseurl }}/presentation-instructions">Presentation Instructions</a></li>
                             <li><a href="#{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
-                            <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li>
-                            <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li>
+                            <!-- <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li> -->
+                            <!-- <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li> -->
                             <li><a href="{{ site.baseurl }}/travel">Travel</a></li>
                         </ul>
                 </li>
